[gd_scene format=3 uid="uid://da0one001"]

[ext_resource type="Script" path="res://scripts/game/zone_dialog.gd" id="1_zone"]

[node name="ZoneDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_zone")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -280.0
offset_right = 220.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 15

[node name="VSRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="MyAvatarVBox" type="VBoxContainer" parent="VBox/VSRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 6

[node name="MyAvatar" type="TextureRect" parent="VBox/VSRow/MyAvatarVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
size_flags_horizontal = 4
stretch_mode = 5

[node name="MyNameLabel" type="Label" parent="VBox/VSRow/MyAvatarVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "„ÅÇ„Å™„Åü"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="VSLabel" type="Label" parent="VBox/VSRow"]
layout_mode = 2
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 0.85, 0, 1)

[node name="OppAvatarVBox" type="VBoxContainer" parent="VBox/VSRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 6

[node name="OppAvatar" type="TextureRect" parent="VBox/VSRow/OppAvatarVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
size_flags_horizontal = 4
stretch_mode = 5

[node name="OppNameLabel" type="Label" parent="VBox/VSRow/OppAvatarVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "???"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="OpponentInfoLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="Sep" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="FightPanel" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="HandRow" type="HBoxContainer" parent="VBox/FightPanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="HandRockBtn" type="Button" parent="VBox/FightPanel/HandRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 70)
toggle_mode = true
text = "‚úä
„Ç∞„Éº"

[node name="HandScissorsBtn" type="Button" parent="VBox/FightPanel/HandRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 70)
toggle_mode = true
text = "‚úå
„ÉÅ„Éß„Ç≠"

[node name="HandPaperBtn" type="Button" parent="VBox/FightPanel/HandRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 70)
toggle_mode = true
text = "‚úã
„Éë„Éº"

[node name="BetRow" type="HBoxContainer" parent="VBox/FightPanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="BetLabel" type="Label" parent="VBox/FightPanel/BetRow"]
layout_mode = 2
text = "Ë≥≠„ÅëÈáë: üí∞"

[node name="BetSpin" type="SpinBox" parent="VBox/FightPanel/BetRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
min_value = 0.0
max_value = 1000.0
step = 1.0

[node name="ConfirmFightBtn" type="Button" parent="VBox/FightPanel"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "ÊâãÊú≠Ê±∫ÂÆö"

[node name="WaitingLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false
text = "Áõ∏Êâã„ÅÆÈÅ∏Êäû„ÇíÂæÖ„Å£„Å¶„ÅÑ„Åæ„Åô..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20
